syntax = "proto3";

package project;

option go_package = "pkg/transport/grpc/dto";

import "google/protobuf/timestamp.proto";

message Project {
    string id = 1;
    string title = 2;
    string description = 3; 
    string status = 4;
    string company_id = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}


// CREATION

message ProjectCreation {
    string title = 1;
    string description = 2;
    string company_id = 3; 
}